@@ -361,29 +361,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="action" ref="report_purchase"/>
         </record>
 
-        <record model="res.user" id="user_process_purchase">
-            <field name="login">user_cron_process_purchase</field>
-            <field name="name">Cron Process Purchase</field>
-            <field name="signature"></field>
-            <field name="active" eval="False"/>
-        </record>
-        <record model="res.user-res.group"
-            id="user_process_purchase_group_purchase">
-            <field name="user" ref="user_process_purchase"/>
-            <field name="group" ref="group_purchase"/>
-        </record>
-
-        <record model="ir.cron" id="cron_process_purchase">
-            <field name="name">Process Confirmed Purchases</field>
-            <field name="request_user" ref="res.user_admin"/>
-            <field name="user" ref="user_process_purchase"/>
-            <field name="interval_number" eval="1"/>
-            <field name="interval_type">hours</field>
-            <field name="repeat_missed" eval="False"/>
-            <field name="model">purchase.purchase</field>
-            <field name="function">cron_process</field>
-        </record>
-
         <record model="ir.ui.view" id="purchase_line_view_form">
             <field name="model">purchase.line</field>
             <field name="type">form</field>
